--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
     startCommand: gunicorn backend.wsgi:application
+    releaseCommand: python manage.py migrate
     envVars:
       - key: DJANGO_SECRET_KEY
         generateValue: true
